--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<!-- Simulación del archivo HTML principal -->
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Autos seminuevos premium en CDMX y Cuernavaca" />
+    <title>Seminuevos Premium</title>
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+  </head>
+  <body class="bg-gray-100 text-gray-900">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
+
